--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
     }
 }
 
+//def testJcenter = true
+def testJcenter = false
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -29,5 +32,9 @@ dependencies {
     implementation 'pub.devrel:easypermissions:0.2.0'
     testImplementation 'junit:junit:4.12'
 
-    implementation project(':qrscan')
+    if(testJcenter) {
+        implementation 'com.ayvytr:qrscan:1.0.0'
+    }else {
+        implementation project(':qrscan')
+    }
 }
